--- a/index.html
+++ b/index.html
@@ -4,273 +4,10 @@
 <title>GOW!Reader Voicelines</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<style>
+<link rel="stylesheet" href="style_pc.css">
+<link rel="stylesheet" href="style_mobile.css">
 
-    @font-face {
-        font-family: gifont;
-        src: url(zh-cn.ttf);
-    }
-
-    html {
-        height: 100%;
-    }
-
-    body {
-        margin: 0;
-        overflow: hidden;
-        transition: 0.3s;
-        font-family: gifont;
-        height: 100%;
-    }
-
-    button {
-        cursor: pointer;
-    }
-
-    @media screen and (orientation: portrait) {
-        html {
-            /* Rotate the content container */
-            transform: rotate(-90deg);
-            transform-origin: left top;
-            /* Set content width to viewport height */
-            width: 100vh;
-            /* Set content height to viewport width */
-            height: 100vw;
-            overflow-x: hidden;
-            position: absolute;
-            top: 100%;
-            left: 0;
-        }
-    }
-
-    #video-bg {
-        position: fixed;
-        left: 0;
-        top: 0;
-        min-width: 100%;
-        min-height: 100%;
-        z-index: -1;
-    }
-
-    .main {
-        display: flex;
-        width: 100%;
-        z-index: 1;
-        height: 100%;
-    }
-
-    .c1 {
-        width: 30%;
-        padding: 40px 20px;
-    }
-
-    .c1 .subtitle {
-        color: rgb(205,178,130);
-        margin-bottom: 30px;
-        padding: 0 10px;
-    }
-
-    .c1 #vl-list {
-        overflow: auto;
-        max-height: 90%;
-    }
-
-    .c1 #vl-list .vl-title-outer {
-        background-color: rgba(0,0,0,0.2);
-        padding: 2px;
-        margin-bottom: 4px;
-        transition: 0.5s;
-    }
-
-    .c1 #vl-list .vl-title-outer:hover {
-        background-color: rgba(0,0,0,0.5);
-    }
-
-    .c1 #vl-list .vl-title-inner {
-        background-color: rgba(0,0,0,0.2);
-        width: 100%;
-        border: solid 2px rgb(255 255 255 / 30%);
-        font-size: 1.2em;
-        font-family: gifont;
-        text-align: left;
-        color: #fff;
-        padding: 16px 20px;
-    }
-
-    .c2 {
-        display: flex;
-        width: 40%;
-    }
-
-    .c2 button {
-        background-color: rgba(0,0,0,0.2);
-        border: none;
-        height: fit-content;
-        margin: auto;
-        color: #fff;
-        font-family: 'gifont';
-        padding: 20px 15px;
-        transition: 0.5s;
-    }
-
-    .c2 button:hover {
-        background-color: rgba(0,0,0,0.5);
-    }
-
-    .c2 #char-img {
-        width: 100%;
-    }
-
-    .c3 {
-        width: 30%;
-        padding: 120px 20px 20px 40px;
-        color: #fff;
-        font-size: 1.2em;
-    }
-
-    .c3 #vl-content {
-        overflow: auto;
-        max-height: 95%;
-        min-height: 95%;
-    }
-
-    .credits {
-        bottom: 0;
-        color: #fff;
-        vertical-align: bottom;
-        font-size: 0.6em;
-        text-align: end;
-    }
-
-    a {
-        color: #ddd;
-        transition: 0.5s;
-    }
-    a:hover {
-        color: #fff;
-    }
-    a:visited {
-        color: #ddd;
-    }
-
-</style>
-
-<script>
-    var chars = [];
-    var char = null;
-    var vlContent = "";
-    var name = "[name]";
-    var deityName = "[deityName]";
-
-    function getName() {
-        name = localStorage.getItem("name");
-        if (!name || name == undefined || name === "null") {
-            name = prompt("Please enter your name", "[name]");
-            localStorage.setItem("name", name);
-        }
-
-        deityName = localStorage.getItem("deityName");
-        if (!deityName || deityName == undefined || deityName === "null") {
-            deityName = prompt("Please enter your deity name", "[deityName]");
-            localStorage.setItem("deityName", deityName);
-        }
-
-        initChars();
-        constructVoicelinesList();
-    }
-
-    function initChars() {
-        chars = [{
-            name: "Zhongli",
-            bg: "zhongli.mp4",
-            idx: 0,
-            voicelines: [{
-                title: `About ${name}`,
-                content: `${name}...`
-            }, {
-                title: `About ${deityName}`,
-                content: `TEST1`
-            }]
-        }, {
-            name: "Xiao",
-            bg: "xiao.mp4",
-            idx: 1,
-            voicelines: [{
-                title: `About ${name}`,
-                content: `${name}...`
-            }]
-        }, {
-            name: "Tartaglia",
-            bg: "childe.mp4",
-            idx: 2,
-            voicelines: [{
-                title: `About ${name}`,
-                content: `${name}...`
-            }]
-        }];
-
-        char = chars[0];
-    }
-
-    function changeCharacter(dir) {
-        if (dir === "next") {
-            let nextIdx = char.idx + 1;
-            if (nextIdx >= chars.length) {
-                nextIdx = 0;
-            }
-            char = chars[nextIdx];
-        } else if (dir === "prev") {
-            let prevIdx = char.idx - 1;
-            if (prevIdx < 0) {
-                prevIdx = chars.length - 1;
-            }
-            char = chars[prevIdx];
-        }
-        document.getElementById('char-name').innerHTML = char.name;
-        changeVideoSource(char.bg);
-        constructVoicelinesList();
-    }
-
-    function changeVideoSource(bg) {
-        var video = document.getElementById('video-bg');
-        var source = document.getElementById('video-src');
-        video.pause();
-
-        source.setAttribute('src', bg);
-        source.setAttribute('type', 'video/mp4');
-
-        video.load();
-        video.play();
-
-        vlContent = "";
-        constructVoicelineContent();
-    }
-
-    function constructVoicelinesList() {
-        let innerHTML = "";
-
-        char.voicelines.forEach((vl) => {
-            console.log({vl});
-            innerHTML += `
-                <div class="vl-title-outer">
-                    <button class="vl-title-inner" onclick="selectVl('${vl.content}')">${vl.title}</button>
-                </div>
-            `;
-        });
-
-        document.getElementById('vl-list').innerHTML = innerHTML;
-    }
-
-    function selectVl(content) {
-        vlContent = content;
-        constructVoicelineContent();
-    }
-
-    function constructVoicelineContent() {
-        //TODO: turn line breaks to <br>???
-        document.getElementById('vl-content').innerHTML = vlContent;
-    }
-</script>
+<script src="index.js"></script>
 
 <body onLoad="getName()">
 
@@ -292,6 +29,7 @@
 
         <div class="c3">
 
+            <div id="vl-title"></div>
             <div id="vl-content"></div>
 
             <div class="credits">
