--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
             <div id="vl-content"></div>
 
             <div class="credits">
-                <div id="version"></div>
+                <!-- <div id="version"></div> -->
                 <div><a target=_blank href="https://genshin.hoyoverse.com/en/">Genshin Impact</a> (c) <a target=_blank href="https://www.hoyoverse.com/en-us/">Hoyoverse</a></div>
                 <div>Background Video from <a target=_blank href="https://genshin.honeyhunterworld.com/?lang=EN">Honey Impact</a></div>
             </div>
         </div>
+
+        <div id="version"></div>
     </div>
 
 </body>
