--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body onLoad="getName(); appendVersion()">
 
-    <video autoplay muted loop id="video-bg">
+    <video autoplay playsinline muted loop id="video-bg">
         <source id="video-src" src="zhongli.mp4" type="video/mp4">
     </video>
 
