--- a/test/index.html
+++ b/test/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Another page</title>
+<title>Another Page</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 <body>
     <div id="main" class="main">
-        Testing
+        Testing a page inside a folder!
     </div>
 
 </body>
