--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
 <title>genshrineimpact Voicelines</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+<style>
+    @font-face {
+        font-family: gifont;
+        src: url(zh-cn.ttf);
+    }
+
+    html {
+        height: 100%;
+        width: 100%;
+        background-color: #000;
+    }
+
+    body {
+        font-family: gifont;
+        color: #fff;
+        text-align: center;
+        padding: 300px;
+    }
+</style>
+
 <body>
-    <div id="main" class="main">
-        Testing
-    </div>
+    <div>Nothing to see here...</div>
 
 </body>
 </html>
