--- a/madlyinlove.html
+++ b/madlyinlove.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>GOW!Reader Voicelines</title>
+<title>Madly In Love? Voicelines</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 <link rel="stylesheet" href="gowreader.css">
